--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
@@ -23,7 +23,7 @@
       <div class="col-sm-7">
         <h1>{{'MAIN_INFO'|translate}}</h1>
         <div >
-          <div class="item">
+          <div class="item-c">
             <div class="row">
               <div class="col-sm-4">
                 <span>{{'EMAIL' | translate}}: </span>
@@ -46,7 +46,7 @@
             </div>
             <div *ngIf="changes[0]"  class="background-blur" (click)="showChangeInfo(0,false)"></div>
           </div>
-          <div class="item">
+          <div class="item-c">
             <div class="row">
               <div class="col-sm-4">
                 <span>{{'PHONE' | translate}}: </span>
@@ -65,7 +65,7 @@
           </div>
             
           </div>
-          <div class="item">
+          <div class="item-c">
             <div class="row">
               <div class="col-sm-4">
                 <span>{{'REG_DATE' | translate}}: </span>
@@ -75,7 +75,7 @@
               </div>
             </div>
           </div>
-          <div class="item">
+          <div class="item-c">
             <div class="row">
               <div class="col-sm-4">
                 <span>{{'LANG' | translate}}: </span>
