--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.css
@@ -237,5 +237,16 @@ button{
         margin: 5px 0;
         
     }
+    .upload{
+        position: absolute;
+        bottom: 0px;
+        z-index: 10;
+        width: 100%;
+        height: 30px;
+        opacity: 0;
+    }
+    .change-panel{
+        left: 0;
+    }
 }
 
