Сделать, чтобы в мобильной версии сайта в профиле пользователя кнопка добавить фотографию появлялась не при наведении на фото (как на обычной версии), а была видна всегда.

--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
@@ -161,6 +161,9 @@ button{
     
 }
 @media (max-width: 767px){
+    .car-img>i{
+        display: none;
+    }
     .car-info-area>div:not(:first-child){
         margin-top:20px; 
     }
