--- a/CarsCrete/ClientApp/src/app/photo-viewer/photo-viewer.component.css
+++ b/CarsCrete/ClientApp/src/app/photo-viewer/photo-viewer.component.css
@@ -12,6 +12,7 @@
 .photo-viewer{
     z-index: 1000;
     width: 70%;
+    max-width: 755px;
     overflow: hidden;
     max-height: 70%;
     background-color:rgb(68, 68, 68); 
@@ -65,6 +66,12 @@
 }
 .min-photo:hover>img{
     border:2px solid rgb(58, 122, 240);
+}
+
+@media(max-width:767px){
+    .container{
+        display: none;
+    }
 }
 
 
